erDiagram
    CUSTOMER ||--o{ CART : "owns"
    CUSTOMER ||--o{ PRODUCT : "may_register"
    CATEGORY ||--o{ PRODUCT : "classifies"
    CART ||--o{ CART_PRODUCT : "contains"
    PRODUCT ||--o{ CART_PRODUCT : "is_added_to"

    CUSTOMER {
        int id PK
        string username UK
        string email
        string password
        string role
        string address
    }

    CATEGORY {
        int category_id PK
        string name
    }

    PRODUCT {
        int product_id PK
        string name
        string image
        int quantity
        int price
        int weight
        string description
        int category_id FK
        int customer_id FK
    }

    CART {
        int id PK
        int customer_id FK
    }

    CART_PRODUCT {
        int id PK
        int cart_id FK
        int product_id FK
    }
